Score and lots of fixes. Audio works better, more drops on the board at the same time, and more.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 		<canvas id="gameCanvas">
 			<p class="error">Your browser does not support HTML5 Canvas!</p>
 		</canvas>
-		<p id="popup-text">Ready?<br><small><small>Press Space, ESC or P to begin. Those keys also pause/unpause.</small></small></p>
+		<p id="score"></p>
+		<p id="popup-text">Ready?
+			<br><small><small>Press Space, ESC or P to begin. Those keys also pause/unpause.</small></small>
+			<br><br><small><small><small>Notice: If you resize the window, you'll have to reload the page!</small></small></small>
+		</p>
 		<div id="overlay"></div>
 	</body>
 </html>
